--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "sass": "^1.34.0",
+    "scss": "^0.2.4",
+    "svg-sprite-loader": "^6.0.6",
     "typescript": "^4.1.2",
     "vite": "^2.3.4"
   }
